# WeChat-TFCC

./: build.sh
samples/: CMakeLists.txt  README  build.sh  demo0.cpp  demo1.cpp  run_model.cpp
tfcc/: CMakeLists.txt
tfcc/core/utils/: tfcc_initializer.cpp
tfcc/mkl/framework/: tfcc_mkldevice.cpp
tfcc_code_generator/: generator.py
tfcc_code_generator/backend/runtime/nodegenerator/math/: __init__.py  mod.py
tfcc_code_generator/backend/runtime/proto/operations/: base_pb2.py  math_pb2.py
tfcc_code_generator/frontend/tensorflow/: frontend.py  tf_loader.py  tf_utils.py
tfcc_code_generator/frontend/tensorflow/converter/math/: __init__.py  floormod.py  minimum.py
tfcc_code_generator/ir/node/: node.py
tfcc_code_generator/ir/node/math/: __init__.py  arithmetic.py
tfcc_runtime/: CMakeLists.txt
tfcc_runtime/framework/: model.cpp  symbolmanager.cpp  symbolmanager.h
tfcc_runtime/operations/math/: mod.cpp  mod.h
tfcc_runtime/proto/operations/: math.proto
